Added store page and related assets; also added links

--- a/index.html
+++ b/index.html
@@ -25,21 +25,35 @@
                 justify-content-center rounded fixed-top align-bottom">
         <ul class="navbar-nav w-50 d-flex">
             <li class="nav-item">
-                <img
-                    src="my_assets/ProjectQuotientLogoFinal.png" width="150px"
+                <a href="index.html">
+                    <img
+                    src="my_assets/ProjectQuotientLogoFinal.png"
+                    width="150px"
                     alt="Company logo">
+                </a>
             </li>
             <li class="nav-item">
-                <a class="btn btn-danger mx-2 fw-bold">Home</a>
+                <a class="btn btn-danger mx-2 fw-bold"
+                    href="index.html">
+                    Home
+                </a>
             </li>
             <li class="nav-item">
-                <a class="btn btn-danger mx-2 fw-bold">Store</a>
+                <a class="btn btn-danger mx-2 fw-bold"
+                    href="store_page.html">
+                    Store
+                </a>
             </li>
             <li class="nav-item">
-                <a class="btn btn-danger mx-2 fw-bold">Forums</a>
+                <a class="btn btn-danger mx-2 fw-bold">
+                    Forums
+                </a>
             </li>
             <li class="nav-item ms-auto">
-                <a class="btn btn-dark mx-2 fw-bold">Login / Sign-up</a>
+                <a class="btn btn-dark mx-2 fw-bold"
+                    href="login.html">
+                    Login / Sign-up
+                </a>
             </li>
         </ul>
     </nav>
