deleted redundant user registration link

--- a/login.html
+++ b/login.html
@@ -71,9 +71,10 @@
                     alt="Infiltrator"
                     width="325px">
             </div>
-            <div class="justify-content p-3 border border-2 rounded border-danger m-1">
+            <div class="justify-content p-3 border border-2 rounded
+                        border-danger m-1">
                 <form class="text-white"
-                    action="user_auth:login_user"
+                    action=""
                     method="post">
                     <label><b>Username</b></label>
                     <input type="text" name="username" required>
@@ -85,8 +86,7 @@
                 </form>
                 <section class="text-white py-3">
                     <b>New here?</b><br>
-                    <a class="btn btn-danger"
-                        href="new_user.html">
+                    <a class="btn btn-danger">
                         Create a profile now
                     </a>
                 </section>
