--- a/login.html
+++ b/login.html
@@ -74,7 +74,6 @@
             <div class="justify-content p-3 border border-2 rounded
                         border-danger m-1">
                 <form class="text-white"
-                    action=""
                     method="post">
                     <label><b>Username</b></label>
                     <input type="text" name="username" required>
@@ -86,9 +85,9 @@
                 </form>
                 <section class="text-white py-3">
                     <b>New here?</b><br>
-                    <a class="btn btn-danger">
+                    <button class="btn btn-danger">
                         Create a profile now
-                    </a>
+                    </button>
                 </section>
             </div>
         </div>
